# animalGPT_behind_the_scenes

./: .gitignore  Animal ML models.ipynb  Data Generation from yt.ipynb  README.md  pyproject.toml  train.py
animal_gpt/predict/: core.py  setup.py
animal_gpt/utils/: bq_class.py  config.py  logger.py
datasets/: All data_2.txt  Animal Context.txt  Animal Debate clean.txt  animal_debate.txt  animla_faye_final_interview.csv  cached_lm_GPT2Tokenizer_128_All data_1.txt  faridoon animal.txt  film_reviews_dataset.txt  ranbir kapoor.txt
datasets/.ipynb_checkpoints/: All data_1-checkpoint.txt  All interviews-checkpoint.txt  Animal Context-checkpoint.txt  Animal Debate clean-checkpoint.txt  all_chunks_contents-checkpoint.txt  animal galata plus-checkpoint.txt  animal_debate-checkpoint.txt  quint_review-checkpoint.txt
